welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:4: error: not found: value goAndGET
	goAndGET()
        ^