welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
while(!estSurBiscuit)
{
	goAndGET()
}

}
